--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
     height: 100vh;
     color:#fff;
 }
-.container{
+.container-fluid{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+
 }
-.container:after{
+.container-fluid:after{
     content: "";
     position: absolute;
     top:0;
@@ -67,13 +67,14 @@
     background: rgb(70, 67, 67);
     color:#d3d3d3;
     position: relative;
+    height: 400px;
 }
 
 .footer .footer-bottom{
     background: #343434; 
     color: #686868;
     height: 50px;
-    width:100% ;
+    width: 100%;
     text-align: center;
     position: absolute;
     bottom: 0px;
@@ -101,8 +102,48 @@ footer .footer-cols ul li:first-child{
    border-bottom:#444 solid 1px;
    margin-bottom:1rem;
    color: white;}
+
    footer .footer-bottom{
     padding:1rem}
 
-    /*banner*/
    
+
+  .container-carousel{
+      margin-top: 15%;
+  }  
+  .img-text{
+      width:100%;
+      height: 300px;
+      display: block;
+      text-align: center;
+      padding: 40% 5%;
+      background: #262626;
+      color: #fff;
+      border-radius: 15px;
+  }
+  .img-text h2{
+      font-size: 25px;
+      text-transform: uppercase;
+      letter-spacing:2px;
+  }
+  .img-text p{
+      font-size: 14px;
+  }
+ .single-box{
+     position: relative;
+     margin-bottom: 30px;
+ }
+ .img-area{
+     position: absolute;
+     width: 125px;
+     height: 125px;
+     border:5px solid #fff;
+     overflow: hidden;
+     top:15px;
+     left:125px;
+     border-radius:50%;
+ }
+ .img-area img{
+     width: 100%;
+ }
+ 
